-webkit-filter missing from computed style enumeration https://bugs.webkit.org/show_bug.cgi?id=84468

Source/WebCore:

Reviewed by Timothy Hatcher.

CSSComputedStyleDeclaration has a list of properties that it exposes.
While the computed style for filter was available, the property wasn't
listed and hence missing in clients like the Web Inspector.

Covered by existing tests.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore): add CSSPropertyWebkitFilter

LayoutTests:

Reviewed by Timothy Hatcher.

Added new results for platforms that have filters enabled. Hopefully
I got them all. Luckily there were already platform results for this
test in each case.

* platform/chromium-mac/fast/css/getComputedStyle/computed-style-expected.txt:
* platform/chromium-mac/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* platform/chromium-win/fast/css/getComputedStyle/computed-style-expected.txt:
* platform/chromium-win/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
* platform/mac/fast/css/getComputedStyle/computed-style-expected.txt:
* platform/mac/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:

Canonical link: https://commits.webkit.org/101960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114766 268f45cc-cd09-0410-ab3c-d52691b4dbfc